Add zio gauges support to mesmer