@@ -20,13 +20,15 @@ public class MesmerZIOMetricAPIInstrumentationModule extends InstrumentationModu
 
   @Override
   public List<TypeInstrumentation> typeInstrumentations() {
-    return Collections.singletonList(ZIOInstrumentations.counterMetricAdvice());
+    return List.of(
+        ZIOInstrumentations.counterMetricAdvice(), ZIOInstrumentations.gaugeMetricAdvice());
   }
 
   @Override
   public List<String> getAdditionalHelperClassNames() {
     return List.of(
         "io.scalac.mesmer.otelextension.instrumentations.zio.advice.ZIOCounterAdvice$",
+        "io.scalac.mesmer.otelextension.instrumentations.zio.advice.ZIOGaugeAdvice$",
         "io.scalac.mesmer.otelextension.instrumentations.zio.ZIOInstrumentations$",
         "io.scalac.mesmer.otelextension.instrumentations.zio.ZIOMetrics$");
   }
